Refactor org.apache.shardingsphere.mcp.tool